# questionary

./: docker-compose.yaml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0b5651e730f3_initial_commit.py  4169856889c6_fix.py  4fb6d0fe85d9_fix.py  5a654202b52f_making_genre_id_optional.py  5ca5ed31985a_add_table_genres.py  933e47982366_fix.py  aa5247cbabcd_fix.py  d760fa9b285d_fix.py  ec753e3507dc_add_user.py  f56bab450f92_initial_migration.py
backend/questionary/: database.py  main.py  models.py
backend/questionary/api/: games.py  genres.py  movies.py  users.py
backend/tests/: conftest.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: ColorModeSwitch.tsx  GameCard.tsx  GameGrid.tsx  GenreList.tsx  NavBar.tsx  PlatformIconList.tsx  UserForm.tsx
frontend/src/hooks/: useGames.ts  useGenres.ts
frontend/src/services/: api-client.ts
migrations/versions/: af2559c758db_init.py
questionary/: database.py  main.py
questionary/api/: users.py
tests/: test_main.py
